--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,13 @@ code {
     monospace;
 }
 
-/* ul {
-  list-style: np;
-} */
+h1,
+h2,
+h3 {
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+ul {
+  margin: 0;
+}
