--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -19,6 +19,7 @@
 
 .Link {
   color: #0bb5e0;
+  text-decoration: none;
 }
 .main {
   height: 100%;
@@ -27,4 +28,14 @@
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh;
+}
+
+.mainContainer {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1280px;
+}
+
+.activeLink {
+  color: beige;
 }
