--- a/src/components/MoovieList/MoovieList.module.css
+++ b/src/components/MoovieList/MoovieList.module.css
@@ -7,12 +7,7 @@
   margin: 0px;
 }
 
-.moovieListTitle {
-  color: #8ccda3;
-  padding-bottom: 15px;
-  padding-top: 15px;
-  text-align: center;
-}
+
 
 .moovieListImg {
   display: block;
@@ -21,11 +16,16 @@
 }
 
 .moovieListText {
-  color: rgb(255, 255, 255);
   background-color: #000;
-}
-
-
-p{ 
-    margin: 0;
+  color: #fff;
+  display: flex;
+  font-size: 14px;
+  font-weight: 700;
+  height: 100%;
+  justify-content: center;
+  margin-top: 10px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  text-align: center;
+  width: 100%;
 }
