--- a/src/pages/MoovieDetails/MoovieDetails.module.css
+++ b/src/pages/MoovieDetails/MoovieDetails.module.css
@@ -47,6 +47,7 @@
   max-width: 100%;
   min-width: 310px;
   margin-bottom: 15px;
+  min-height: 400px;
 }
 
 .textWrapper {
@@ -89,18 +90,11 @@
 }
 
 .links {
+  display: inline-block;
+  text-align: center;
   font-size: 22px;
   text-decoration: none;
-
-  /* background-color: #007bff; Изменение цвsета фона на синий */
-}
-
-.linksTitle {
-  margin-bottom: 15px;
-}
-
-.linksButton {
-  width: 150px;
+  width: 100px;
   border-radius: 10px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   padding: 10px 20px;
@@ -108,9 +102,12 @@
   transition: background-color 0.5s ease-in-out;
   cursor: pointer;
 }
-
-.linksButton:hover {
+.links:hover {
   background-color: #0bb5e0;
+}
+
+.linksTitle {
+  margin-bottom: 15px;
 }
 
 .linkslist {
