--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -8,6 +8,7 @@ form {
 
   border-radius: 5px;
   margin-bottom: 20px;
+  /* background-color: #c0c0c0; */
 }
 
 input[type='text'] {
@@ -15,6 +16,8 @@ input[type='text'] {
   margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  background-color: #d3d3d3;
+  transition: transform 0.5s ease-in-out;
 }
 
 button[type='submit'] {
@@ -29,4 +32,9 @@ button[type='submit'] {
 
 button[type='submit']:hover {
   background-color: #0056b3;
+}
+
+.form input:focus {
+  border-color: #007bff;
+  transform: scale(1.05);
 }
