--- a/src/components/MoovieList/MoovieList.module.css
+++ b/src/components/MoovieList/MoovieList.module.css
@@ -7,8 +7,6 @@
   margin: 0px;
 }
 
-
-
 .moovieListImg {
   display: block;
   height: auto;
@@ -16,7 +14,7 @@
 }
 
 .moovieListText {
-  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.7);
   color: #fff;
   display: flex;
   font-size: 14px;
@@ -28,4 +26,33 @@
   padding-top: 10px;
   text-align: center;
   width: 100%;
+}
+
+.moovieItem {
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+
+@keyframes backgroundAnimation {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 100% 0;
+  }
+}
+
+.moovieItem:hover {
+  transform: scale(1.05);
+  background-image: linear-gradient(45deg, white, #0bb5e0);
+  background-size: 200% 100%;
+  animation: backgroundAnimation 0.5s ease infinite;
 }
